fixed register page alignment

--- a/src/pages/register/RegisterPage.css
+++ b/src/pages/register/RegisterPage.css
@@ -2,14 +2,15 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
+  height: 100vh;
 }
 
 .wrapper {
   width: 100%;
-  padding: 20px;
-  /* display: flex;
+  /* padding: 20px; */
+  display: flex;
   justify-content: center;
-  align-items: center; */
+  align-items: center;
   background-color: var(--background);
 }
 
